# Dissertation

./: .gitignore  README.md  ResultsForReport.xlsx
AutomaticParameterisation/: ACO.cpp  ACOHeuristic.cpp  ACOHeuristic.h  CMakeLists.txt  EVRP.cpp  EVRP.hpp  LocalSearches.cpp  LocalSearches.h  heuristic.cpp  parameteriser.cpp  stats.cpp
SampleCode/: ACO.cpp  ACO.h  ACOHeuristic.cpp  ACOHeuristic.h  ACOVar.txt  ACOWithChargingStation.cpp  ACOWithChargingStation.h  ACOv1.cpp  ACOv1.h  AStarHeuristic.cpp  AStarHeuristic.h  CMakeLists.txt  DijkstrasHeuristic.cpp  DijkstrasHeuristic.h  ECACOVar.txt  EVRP.cpp  EVRP.hpp  GAHeuristic.cpp  GAPMXVar.txt  GAPXVar.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  KNN.cpp  KNN.h  KNNHeuristic.cpp  LocalSearches.cpp  LocalSearches.h  MMACOVar.txt  MaxMinACO.cpp  MaxMinACO.h  Visualise.py  greedyEuclideanHeuristic.cpp  heuristic.cpp  heuristic.hpp  json.cpp  json.hpp  jsonTour.json  main.cpp  randomHeuristic.cpp  stats.cpp  (+3 more)
SampleCode/AStar/: AStarHeuristic.cpp
SampleCode/AntColonyOptimisation/: ACO.cpp  ACO.h  ACOHeuristic.cpp  ACOHeuristic.h  ACOWithChargingStation.cpp  ACOWithChargingStation.h  MaxMinACO.cpp  MaxMinACO.h
SampleCode/ChainedLKSearch/: CLKSearch.cpp  CLKSearch.h  CLKSearchHeuristic.cpp  CLKSearchHeuristic.h
SampleCode/ClusterBasedACO/: CACO.cpp  CACO.h  CACOHeuristic.cpp  Clusterer.cpp  Clusterer.h  KMeansClustering.cpp  KMeansClustering.h
SampleCode/Data/: RunData1.txt  RunData10.txt  RunData11.txt  RunData12.txt  RunData13.txt  RunData14.txt  RunData15.txt  RunData16.txt  RunData17.txt  RunData18.txt  (+12 more)
(+332 files in other folders)
